add Julia token base on ERC-20 standard

--- a/hardhat-tutorial/package.json
+++ b/hardhat-tutorial/package.json
@@ -1,28 +1,31 @@
 {
-	"name": "hardhat-tutorial",
-	"version": "1.0.0",
-	"main": "index.js",
-	"author": "Dustin",
-	"license": "MIT",
-	"devDependencies": {
-		"@nomicfoundation/hardhat-chai-matchers": "^2.0.6",
-		"@nomicfoundation/hardhat-ethers": "^3.0.5",
-		"@nomicfoundation/hardhat-ignition": "^0.15.0",
-		"@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
-		"@nomicfoundation/hardhat-network-helpers": "^1.0.10",
-		"@nomicfoundation/hardhat-toolbox": "^5.0.0",
-		"@nomicfoundation/hardhat-verify": "^2.0.5",
-		"@typechain/ethers-v6": "^0.5.1",
-		"@typechain/hardhat": "^9.1.0",
-		"chai": "4",
-		"ethers": "^6.11.1",
-		"hardhat": "^2.22.2",
-		"hardhat-gas-reporter": "^2.0.2",
-		"openzeppelin-solidity": "^4.6.0",
-		"solidity-coverage": "^0.8.11",
-		"typechain": "^8.3.2"
-	},
-	"dependencies": {
-		"web3": "^4.6.0"
-	}
+  "name": "hardhat-tutorial",
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "Dustin",
+  "license": "MIT",
+  "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.6",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
+    "@nomicfoundation/hardhat-ignition": "^0.15.0",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.5",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/mocha": "^10.0.6",
+    "chai": "4",
+    "ethers": "^6.11.1",
+    "hardhat": "latest",
+    "hardhat-gas-reporter": "^2.0.2",
+    "openzeppelin-solidity": "^4.6.0",
+    "solidity-coverage": "^0.8.11",
+    "ts-node": "^10.9.2",
+    "typechain": "^8.3.2",
+    "typescript": "^5.4.3"
+  },
+  "dependencies": {
+    "web3": "^4.6.0"
+  }
 }
