--- a/hardhat-tutorial/package.json
+++ b/hardhat-tutorial/package.json
@@ -12,6 +12,7 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.5",
+    "@openzeppelin/test-helpers": "^0.5.16",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
     "@types/mocha": "^10.0.6",
@@ -26,6 +27,9 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.1.0",
+    "@uniswap/v2-core": "^1.0.1",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "web3": "^4.6.0"
   }
 }
