--- a/hardhat-tutorial/package.json
+++ b/hardhat-tutorial/package.json
@@ -20,6 +20,7 @@
     "ethers": "^6.11.1",
     "hardhat": "latest",
     "hardhat-gas-reporter": "^2.0.2",
+    "hardhat-tracer": "^3.1.0",
     "openzeppelin-solidity": "^4.6.0",
     "solidity-coverage": "^0.8.11",
     "ts-node": "^10.9.2",
